fix color points header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -774,7 +774,7 @@ a {
   vertical-align: middle;
   font-weight: 700;
   font-size: 15px;
-  color: #FF9800;
+  color: #FFC107;
 }
 
 .app-navigation__profile-avatar {
