--- a/public/index.ejs
+++ b/public/index.ejs
@@ -159,7 +159,7 @@
                     </div>
                     <div class="app-header__mobile">
                         <span class="app-mobile__title mdl-layout-title">
-                            <span class="app-logo__text" ng-bind="title||'name'|translate"></span>
+                            <span class="app-logo__text" ng-bind="title|translate"></span>
                         </span>
                         <a ng-if="challenges.length"
                            class="app-header__mobile-link"
