fix modal profile fixed avatar

--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -1,5 +1,5 @@
 <div id="modal-profile" 
-     class="app-modal app-modal__bg" 
+     class="app-modal app-modal--profile app-modal__bg" 
      role="dialog" 
      aria-hidden="true"
      data-modal
