--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -10,17 +10,14 @@
         </div>
     </div>
 
-    <div ng-class="{'app-profile__show-pieces': hasLostPieces(player.lostPieces) }">
+    <div show-profile="player" ng-class="{'app-profile__show-pieces': hasLostPieces(player.lostPieces) }">
         <div class="app__pull-left">
-            <a show-profile="player" href>
-                <img avatar
-                     show-profile="player" 
-                     class="app-avatar app-profile__avatar" 
-                     ng-src="{{ player.avatar }}">
-            </a>
+            <img avatar
+                 class="app-avatar app-profile__avatar" 
+                 ng-src="{{ player.avatar }}">
         </div>
         <div class="app-profile__name">
-            <a show-profile="player" class="app-profile__name" href>{{ player.name }}</a>
+            <a class="app-profile__name" href>{{ player.name }}</a>
         </div>
         <div class="app-profile__info app-profile__info--blitz" title="{{ 'blitz'|translate }}">
             <i class="app-icon material-icons">flash_on</i>
