add cursor pointer show profile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,10 @@ a {
   color: #fff;
 }
 
+[show-profile] {
+  cursor: pointer;
+}
+
 /* fix ie */
 .mdl-button--fab .material-icons {
   position: absolute;
