Revert "fix link profile game"
This reverts commit 42c22bd5ab99b91feb1213d901e17b63fa80cc83.

--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -10,14 +10,17 @@
         </div>
     </div>
 
-    <div show-profile="player" ng-class="{'app-profile__show-pieces': hasLostPieces(player.lostPieces) }">
+    <div ng-class="{'app-profile__show-pieces': hasLostPieces(player.lostPieces) }">
         <div class="app__pull-left">
-            <img avatar
-                 class="app-avatar app-profile__avatar" 
-                 ng-src="{{ player.avatar }}">
+            <a show-profile="player" href>
+                <img avatar
+                     show-profile="player" 
+                     class="app-avatar app-profile__avatar" 
+                     ng-src="{{ player.avatar }}">
+            </a>
         </div>
         <div class="app-profile__name">
-            <a class="app-profile__name" href>{{ player.name }}</a>
+            <a show-profile="player" class="app-profile__name" href>{{ player.name }}</a>
         </div>
         <div class="app-profile__info app-profile__info--blitz" title="{{ 'blitz'|translate }}">
             <i class="app-icon material-icons">flash_on</i>
