--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -1,3 +1,7 @@
+<div class="app-infos">
+    <div class="app__pull-left">{{ 'players_online'|translate:{n: countConnected} }}</div>
+    <div class="app__pull-right">{{ 'games_in_play'|translate:{n: countGames} }}</div>
+</div>
 <div element class="app-element app-element--small mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <element-toggle name="'games'" collection="createdGames"></element-toggle>
     <div element-content class="app-element__body">
