fix icon challenges

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -168,7 +168,7 @@
                            href>
                             <i class="app-icon material-icons"
                                ng-class="{'app-badge mdl-badge mdl-badge--overlap': !!challenges.length}"
-                               data-badge="{{ challenges.length }}">notifications</i>
+                               data-badge="{{ challenges.length }}">games</i>
                         </a>
                     </div>
                 </div>
