--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -176,6 +176,7 @@
                 <div class="app-form__select">
                     <select ng-model="challenge.color" 
                             ng-options="value as value|translate for (key, value) in paramsGame.colors" 
+                            ng-class="{'value': challenge.color }"
                             id="challenge-color">
                             <option value="">{{ 'random' | translate }}</option>
                     </select>
