--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -132,6 +132,11 @@
     </div>
 </div>
 
+<div class="app-infos">
+    <div ng-if="displayConnected" ng-bind-html="displayConnected" class="app__pull-left"></div>
+    <div ng-if="displayGames" ng-bind-html="displayGames" class="app__pull-right"></div>
+</div>
+
 <div id="modal-challenger" 
      class="app-modal app-modal__bg" 
      role="dialog" 
