--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2919,7 +2919,7 @@ a {
   }
 
   .app-game__played--phone-notation.is-active {
-    color: #DB4437;
+    color: #607D8B;
     font-weight: bold;
   }
 
